[package]
name = "image-go-nord"
version = "0.1.0"
authors = ["Amrit Rathie <amrit.rathie@gmail.com>"]
edition = "2018"
description = "Convert any image to the Nord colorscheme"

[lib]
crate-type = ["lib", "cdylib", "staticlib"]

[dependencies]
image = "0.23.14"
itertools = "0.10.0"
num-traits = "0.2.14"
smallvec = "1.6.1"
pyo3 = { version = "0.13.2", optional = true }
rayon = { version = "1.5.0", optional = true }
serde = { version = "1.0.125", optional = true, features = ["derive"] }
serde_json = { version = "1.0.64", optional = true }
wasm-bindgen = { version = "0.2.73", optional = true }
wee_alloc = { version = "0.4.5", optional = true }

[features]
ffi = []
